tests/spec/compile-fail/057_string_literal_not_string.zn
// category: compile-fail
// profile: freestanding
// purpose: string literal does not implicitly construct owned String

module tests.fail.stringLiteralNotString;

fn bad() {
    val text: String = "hello"; // expected-error: string literal is StringSlice; use String.from("hello") for owned String
}
